little fix in the buttons play and create on mobile

--- a/public/home/css/site.styl
+++ b/public/home/css/site.styl
@@ -1028,9 +1028,11 @@ h1,h2,h3,h4,h5
   }
   .text .t1-links {
     display: block
+    margin-top: 25px
   }
   .text .t1-links .how-it-works, .text .t1-links .create-sharelock {
-    max-width: 152px
+    width: 125px
+    padding: 9px 0
   }
   .text .t1-links .how-it-works, .text .t1-links .fork-from, .text .t1-links .create-sharelock {
     display: inline-block
@@ -1038,7 +1040,7 @@ h1,h2,h3,h4,h5
   }
 
   .text .t1-links .create-sharelock {
-    margin-left: 10px
+    margin-left: 18px
   }
   
   .stores,
